www/tablet/css/fhem-tablet-ui.css
/* ... */
.lift {
    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.2);
}

.align-center {
    align-self: center;
}


/* End Flexbox layout */


/* responsive menu */

.menu ~ main > .page {
    padding-left: 180px;
    width: auto;
}

:not([data-type="circlemenu"]) > .menu {
    background: #1D1F20;
    height: 100vh;
    width: 180px;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 5;
    outline: none;
}

.menu ul {
    list-style: none;
    padding: 2em 0;
    margin: 0;
}

.menu header {
    text-align: center;
    margin-top: 0.7em;
}

.menu ul li {
    padding: 0.5em 1em 0.5em 1em;
    font-size: 0.95em;
    text-align: initial;
    transition: all 0.15s linear;
    cursor: pointer;
}

.menu ul li span {
    padding: 0.2em 0.5em;
    font-size: 0.9em;
}

.menu ul li div[data-type="link"] {
    text-align: left;
}

.menu ul li:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.menu ul li:focus {
    outline: none;
}

@media screen and (max-width: 900px) and (min-width: 480px) {
    .menu ~ main > .page {
        padding-left: 90px;
    }
    .menu {
        width: 90px;
    }
    .menu ul li {
        height: 60px;
        position: relative;
        padding: 0.5em 1em 0.5em 2.1em;
    }
    .menu ul li span {
        opacity: 0;
        position: absolute;
        background: rgba(0, 0, 0, 0.5);
        padding: 0.2em 0.5em;
        border-radius: 4px;
        top: 50%;
        left: 80px;
        transform: translate3d(-15px, -50%, 0);
        transition: all 0.15s ease-in-out;
    }
    .menu ul li span:before {
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        top: 50%;
        left: -5px;
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        border-right: 5px solid rgba(0, 0, 0, 0.5);
        transform: translateY(-50%);
    }
    .menu ul li:hover span {
        opacity: 1;
        transform: translate3d(0px, -50%, 0);
    }
}

@media screen and (max-width: 480px) {
    .menu ~ main > .page {
        padding-left: 0px;
    }
    .menu {
        width: 230px !important;
        box-shadow: 0 0 0 100em rgba(0, 0, 0, 0);
        transform: translate3d(-230px, 0, 0);
        transition: all 0.3s ease-in-out;
    }
    .menu .menu-trigger {
        width: 40px;
        height: 40px;
        position: absolute;
        left: 100%;
        background: #1D1F20;
    }
    .menu .menu-trigger:before,
    .menu .menu-trigger:after {
        content: '';
        width: 50%;
        height: 2px;
        background: #fff;
        border-radius: 10px;
        position: absolute;
        top: 45%;
        left: 50%;
        transform: translate3d(-50%, -50%, 0);
    }
    .menu .menu-trigger:after {
        top: 55%;
        transform: translate3d(-50%, -50%, 0);
    }
    .menu.show {
        transform: translate3d(0, 0, 0);
        box-shadow: 0 0 0 100em rgba(0, 0, 0, 0.6);
    }
}


/* End responsive menu */

.bg-gray,
.btn-gray {
    background-color: #393939 !important;
}

.bg-lightgray,
.btn-lightgray {
    background-color: #777777 !important;
}

.bg-orange,
.btn-orange {
    background-color: #aa6900 !important;
}

.bg-red,
.btn-red {
    background-color: #ad3333 !important;
}

.bg-green,
.btn-green {
    background-color: #32a054 !important;
}

.bg-mint,
.btn-mint {
    background-color: #5bc995 !important;
}

.bg-ligthblue,
.btn-ligthblue {
    background-color: #6699FF !important;
}

.bg-blue,
.btn-blue {
    background-color: #337ab7 !important;
}

.bg-white,
.btn-white {
    background-color: #ffffff !important;
}

.bg-black,
.btn-black {
    background-color: #111111 !important;
}

.bg-yellow,
.btn-yellow {
    background-color: #ffe066 !important;
}


/* Toolbar */

footer {
    position: absolute;
    left: 0;
    bottom: 0;
    background: #f7f7f8;
    height: 67px;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    z-index: 500;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

footer::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    bottom: auto;
    right: auto;
    height: 1px;
    width: 100%;
    background-color: #c4c4c4;
    display: block;
    z-index: 15;
    -webkit-transform-origin: 50% 0;
    transform-origin: 50% 0;
}

.tab-bar {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    padding: 0 8px;
    box-sizing: border-box;
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}

@media screen and (min-width: 768px) {
    .tab-bar {
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        -webkit-justify-content: center;
        justify-content: center;
    }
}

@media screen and (min-width: 768px) {
    .tab-bar .tab-link {
        width: auto;
        min-width: 105px;
    }
}

.tab-link {
    height: 100%;
    width: 100%;
    box-sizing: border-box;
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    overflow: visible;
    -webkit-box-flex: 1;
    -ms-flex: 1;
    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
}
/* ... */

